[tool.poetry]
name = "ecommerce-hybrid-search-playground"
version = "0.1.0"
description = ""
authors = ["Joon Hwan 김준환 <xncbf12@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.19.0"
transformers = "^4.40.1"
sentence-transformers = "^2.7.0"
pinecone-client = "^4.0.0"
pinecone-text = "^0.9.0"
rank-bm25 = "^0.2.2"
konlpy = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
